--- a/exp_design/exp_design.tex
+++ b/exp_design/exp_design.tex
@@ -5,7 +5,7 @@
 \chapter{Experimental design} \label{chap:exp_design}
 
     \paragraph
-    As discussed in the literature study in Chapter~\ref{chap:lit_study}, experimental data is a valuable part of any work involving multirotors control.
+    As discussed in the literature study in Chapter~\ref{chap:lit_study}, experimental data is a valuable part of any work involving multirotor control.
     This chapter will provide an overview of the hardware, software, \gls{HITL} simulations, and practical methodology used in this work.
 
     \FloatBarrier\section{Hardware components}
