--- a/system_id/implementation.tex
+++ b/system_id/implementation.tex
@@ -21,6 +21,7 @@
         The simulation model was verified in Chapter~\ref{chap:modelling}.
         Using \gls{SITL} ensures that the simulated controller dynamics is as close as possible to practical flights.
         Gazebo applies realistic levels of sensor noise and PX4 applies an \gls{EKF} for state estimation.
+        This simulation environment will be further discussed in Chapter~\ref{chap:exp_design}.
 
         \paragraph
         The procedure used to evaluate the black-box techniques is as follows:
